--- a/src/css/common.css
+++ b/src/css/common.css
@@ -48,7 +48,7 @@ input {
   height: 90vh;
 }
 
-/* .field {
+.field {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -63,7 +63,7 @@ input {
   display: flex;
   flex-direction: row;
   justify-content: center;
-} */
+}
 
 
 
